# stm32f10x-cmake-stdperiph

./: .gitignore  CMakeLists.txt  readme.md
CMSIS/CM3/CoreSupport/: cmsis_compiler.h
CMSIS/CM3/DeviceSupport/ST/STM32F10x/: stm32f10x.h
STM32F10x_StdPeriph_Driver/: STM32F10x.ld
STM32F10x_StdPeriph_Driver/inc/: stm32f10x_conf.h
STM32F10x_StdPeriph_Driver/src/: misc.c
src/: blink.c
